[build-system]
requires = ["setuptools>=74.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeadviser_desktop"
version = "1.0.0"
description = "TradeAdviser Desktop - Professional standalone trading application for institutional traders"
readme = "README.md"
requires-python = ">=3.10"

license = { text = "Proprietary" }

authors = [{ name = "Noel Nguemechieu" }]

keywords = ["trading", "quant", "finance", "broker", "ai"]

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "pandas-market-calendars>=4.4",
    "scikit-learn>=1.3",
    "aiohttp>=3.9",
    "websockets>=10,<11",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "joblib>=1.3",
    "ta>=0.11",
    "tzdata>=2024.1",

]

[project.scripts]
tradeadviser-desktop = "src.main:main"

[project.urls]
Homepage = "https://github.com/nguemechieu/tradeadviser"
Repository = "https://github.com/nguemechieu/tradeadviser"

# =========================docker-compose logs backend
# OPTIONAL DEPENDENCIES
# =========================

[project.optional-dependencies]

ui = [
    "Pillow>=10.0",
    "qrcode>=7.4",
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "qasync>=0.26",
    "matplotlib>=3.7",
]

brokers = [
    "ccxt~=2.9.10",
    "oandapyV20>=0.7",
    "stellar-sdk[aiohttp]>=13,<14",
    "alpaca-trade-api>=3.1",
]

ml = [
    "xgboost>=1.7",
    "hmmlearn>=0.3",
    "arch>=6.0",
]

distributed = [
    "celery>=5.3",
    "redis>=5.0",
]

audio = [
    "SpeechRecognition>=3.10",
    "sounddevice>=0.4",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.6",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.5",
    "flake8>=7.0",
    "flake8-bugbear>=24.4",
    "bandit>=1.7",
    "build>=1.2",
    "twine>=5.1",
]

# =========================
# SETUPTOOLS CONFIG
# =========================

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "data*", "node_modules*", ".deps_ui*", "*.log"]

# =========================
# FORMATTERS
# =========================

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

# =========================
# COVERAGE
# =========================

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
