[build-system]
requires = ["setuptools>=74.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeadviser_server"
version = "1.0.0"
description = "TradeAdviser Server - Full-stack institutional trading backend and web console"
readme = "README.md"
requires-python = ">=3.11"

license = { text = "Proprietary" }

authors = [{ name = "Noel Nguemechieu" }]

keywords = ["trading", "quant", "finance", "broker", "ai", "fastapi", "react"]

dependencies = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.23",
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.12",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "kafka-python>=2.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3",
    "pydantic-extra-types>=2.0",
    "aioredis>=2.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]

database = [
    "alembic>=1.12",
    "asyncpg>=0.29",
]

monitoring = [
    "prometheus-client>=0.17",
    "python-json-logger>=2.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.6",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.5",
    "flake8>=7.0",
    "flake8-bugbear>=24.4",
    "bandit>=1.7",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]

# =========================
# SETUPTOOLS CONFIG
# =========================

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "backend*"]
exclude = ["tests*", "data*", "frontend*", "node_modules*", ".deps*", "*.log", "dist*", "build*"]

# =========================
# FORMATTERS
# =========================

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

# =========================
# MYPY
# =========================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# =========================
# PYTEST
# =========================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

# =========================
# COVERAGE
# =========================

[tool.coverage.run]
branch = true
source = ["app", "backend"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
