[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeadviser-backend"
version = "1.0.0"
description = "TradeAdviser server FastAPI backend by Sopotek Inc"
readme = "README.md"
requires-python = ">=3.14.3"
license = { text = "MIT" }
authors = [
    { name = "Sopotek Inc", email = "info@sopotek.com" }
]
keywords = [
    "tradeadviser",
    "trading",
    "fastapi",
    "quant",
    "portfolio",
    "risk",
    "signals",
    "sopotek"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",

    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg[binary]>=3.1.18,<4.0.0",
    "alembic>=1.13.0,<2.0.0",

    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.3.0,<5.0.0",
    "python-multipart>=0.0.9,<1.0.0",

    "httpx>=0.27.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "websockets>=12.0,<16.0",

    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",

    "redis>=5.0.0,<6.0.0",
    "celery>=5.3.0,<6.0.0",

    "prometheus-client>=0.20.0,<1.0.0",
    "structlog>=24.1.0,<26.0.0",

    "email-validator>=2.1.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9.0.3",
    "pytest-asyncio>=0.26.0,<1.3.0",
    "pytest-cov>=6.3.0,<7.1.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.14.0, <1.20.2",
    "black>=26.3.1",
    "pre-commit>=3.7.0,<5.0.0"
]

ml = [
    "scikit-learn>=1.4.0,<2.0.0",
    "xgboost>=2.0.0,<4.0.0",
    "joblib>=1.3.0,<2.0.0"
]

brokers = [
    "ccxt>=4.3.0,<5.0.0",
    "alpaca-py>=0.28.0,<1.0.0",
    "oandapyV20>=0.7.2,<1.0.0"
]

all = [
    "tradeadviser-backend[dev,ml,brokers]"
]

[project.urls]
Homepage = "https://www.tradeadviser.org"
Company = "https://www.sopotek.com"
Repository = "https://github.com/nguemechieu/tradeadviser"

[project.scripts]
tradeadviser-backend = "main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "backend*", "api*", "core*", "models*", "services*", "shared*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "alembic"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM"
]
ignore = [
    "E501"
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "build",
    "dist",
    "migrations",
    "alembic"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --disable-warnings"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true